src/widgets/kernel/qwidget.cpp
@@ -2350,7 +2350,9 @@ QWidget *QWidget::find(WId id)
 */
 WId QWidget::winId() const
 {
-    if (!testAttribute(Qt::WA_WState_Created) || !internalWinId()) {
+    if (!data->in_destructor
+        && (!testAttribute(Qt::WA_WState_Created) || !internalWinId()))
+    {
 #ifdef ALIEN_DEBUG
         qDebug() << "QWidget::winId: creating native window for" << this;
 #endif
